<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/mainColor"
    tools:context="com.example.user.pocotest.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:textSize="18dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/description1">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:text="@string/description2">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="@string/description3">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginBottom="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="@string/description4">
                </TextView>

                <Button
                    android:id="@+id/signUpFirstContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:background="@drawable/dark_button_no_border"
                    android:text="@string/got_it"
                    android:textColor="@color/mainColor" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>