<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.user.pocotest.activities.WelcomeActivity"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_weight="0.7"
        app:srcCompat="@drawable/ic_insert_emoticon_black_24dp" />

    <TextView
        android:id="@+id/congratulationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/mainColor"
        android:textSize="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <Button
                android:id="@+id/congratulationButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_weight="1"
                android:background="@drawable/light_button"
                android:text="@string/thank_you1"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/congratulationButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_weight="1"
                android:background="@drawable/light_button"
                android:text="@string/thank_you2"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/congratulationButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_weight="1"
                android:background="@drawable/light_button"
                android:text="@string/thank_you3"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/congratulationButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_weight="1"
                android:background="@drawable/light_button"
                android:text="@string/thank_you4"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/congratulationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:layout_weight="1"
                android:background="@drawable/light_button"
                android:text="@string/thank_you"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
